--- a/environment.yml
+++ b/environment.yml
@@ -8,7 +8,7 @@ dependencies:
   - pip
   - pipx
   - jupyterlab=3.2
-  - code-server=3
+  # - code-server=3
   - jupyter-vscode-proxy=0.1
   # Dev tools (could be handled by nox)
   - pre-commit
